--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>
 <body>
     
+
     <div id="flag">
-        <img src="FLAGS/ad.png" width="30%">
+        <img src="FLAGS/cv.png" width="30%">
     </div>
 
     <hr />
