Added North Macedonia

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
 
     <div id="flag">
-        <img src="FLAGS/cv.png" width="30%">
+        <img src="FLAGS/cv.png" width="25%" id="flagImg">
     </div>
 
     <hr />
