Added score and fixed Nepal and Niger flags from pushing buttons down too far

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     <title>Flag Guesser</title>
 </head>
 <body>
-    
+
+    <h2 id="score">
+        0 / 192
+    </h2>
 
     <div id="flag">
-        <img src="FLAGS/cv.png" width="25%" id="flagImg">
+        <img src="FLAGS/np.png" width="30%" id="flagImg">
     </div>
 
     <hr />
